<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_light_background"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/alertdialog_timeover_title"
        android:textSize="27sp"
        android:textStyle="bold"
        android:paddingVertical="10dp"/>

    <!--内容测试而已，需要后加入-->
    <TextView
        android:id="@+id/context_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/alertdialog_timeover_context"
        android:textSize="20sp"
        android:paddingVertical="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/alertdialog_timeover_tipcontext"
        android:paddingVertical="10dp"/>

    <!--button-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/alertdialog_timeover_btn_ok"
            />

        <Button
            android:id="@+id/btn_cencel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="100dp"
            android:text="@string/alertdialog_timeover_btn_cencel" />

    </LinearLayout>


</LinearLayout>